--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1>Age: 27</h1>
             </div>
             <div class="card">
-                <img src="../image/2.jpeg" alt="" />
+                <img src="https://thumbs.dreamstime.com/b/fashion-model-wavy-hairstyle-attractive-young-girl-curly-hair-posing-studio-face-beautiful-woman-long-brown-female-196126449.jpg" alt="" />
                 <h1><span>Model name: </span> Allen</h1>
                 <h1>Age: 22</h1>
             </div>
