--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/media.css">
-    <title>Beauty Pageant</title>
+    <title>Face Of India</title>
     <link rel="icon" href="https://cdn6.f-cdn.com/contestentries/1432766/31419717/5bc71b0008300_thumb900.jpg" type="image/x-icon">
 </head>
 
 <body>
     <nav class="fixed-top">
         <div class="logo">
-            <div>Beauty Pageant</div>
+            <div>Face Of India</div>
         </div>
         <input type="checkbox" id="click">
         <label for="click" class="menu-btn">,
@@ -140,8 +140,8 @@
     <div id="about"></div>
     <section class="aboutus">
         <h1>About Us</h1>
-        <p class="about">Beauty Pageant is a platform built to create role models for the world with a sole mission to create and contribute to the society. It is a platform having ample opportunities and national exposure for all ladies pan India. This is a platform
-            to showcase your talent, to live your dreams, and a platform to inspire others to be the quintessence of womanhood.</p>
+        <p class="about">Sathee's Miss Face Of India is a platform built to create role models for the world with a sole mission to create and contribute to the society. It is a platform having ample opportunities and national exposure for all ladies pan India. This is
+            a platform to showcase your talent, to live your dreams, and a platform to inspire others to be the quintessence of womanhood.</p>
         <p class="about">Many women dream to live like a model at least once in their lifetime. So, we are here to give you that life changing experience, to give you the joy and happiness of winning a crown and alluring titles. We believe that every woman is unique and
             beautifully admirable in her own way. The pageant has no limitations for an aspiring and deserving candidate, the sky is the Limit.</p>
         <p class="about">We encourage women empowerment and promote cultural heritage and diversity. We want you to use your talent to raise awareness in the aid of humanity and to make a real difference to the society.</p>
@@ -191,7 +191,11 @@
                             </div>
                         </div>
                     </div>
-                    <input class="button" type="submit" value="Submit" />
+                    <input class="button" type="submit" value="Submit" /><br>
+                    <div class="phone"> <span><br>Call Us: <br><i aria-hidden="true" class="fa fa-phone"> +91 9871 099 748</i></span>
+                    </div>
+                    <div class="phone"> <span>Mail: <br><i aria-hidden="true" class="fa fa-envelope">  saathee.org@gmail.com</i></span>
+                    </div>
                 </form>
             </div>
         </div>
