--- a/register.html
+++ b/register.html
@@ -328,8 +328,8 @@
             </tr>
             <tr>
                 <td colspan="2" class="center">
-                    <a href="index.html"><input class="button" type="submit" value="Pay now"></a>
-                    <input class="button" type="reset" value="Reset">
+                    <input class="button" type="submit" value="Pay now">
+                    <a href="index.html"><input class="button" type="reset" value="Reset"></a>
                 </td>
             </tr>
         </table>
